--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
     package="com.example.deanapp">
     <uses-permission android:name="android.permission.INTERNET"/>
    <application
+       android:usesCleartextTraffic="true"
         android:label="deanapp"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
