--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ flutter:
     - assets/images/deanSubtitle.png
     - assets/images/masterCard.png
     - assets/images/payoneer.png
+    - assets/images/graduationCap.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
