--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_screenutil: ^5.5.4
   flutter_animation_progress_bar: ^2.2.1
   video_player: ^2.4.7
+  chewie: ^1.3.5
+  flick_video_player: ^0.5.0
 
 dev_dependencies:
   flutter_test:
