--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   video_player: ^2.4.7
   chewie: ^1.3.5
   flick_video_player: ^0.5.0
+  http: ^0.13.5
+  fluttertoast: ^8.0.9
 
 dev_dependencies:
   flutter_test:
